# mics

./: .gitattributes  .gitignore  mems_rect_array.py  pyproject.toml  setup.cfg
assets/: channel.ply  checkerboard_10x10.ply  cube.ply  cube_10cm.ply  lumpy_8x8.ply  right_angle.ply  right_angle_tri.ply
assets/cross-scene/: cross-scene.ply
assets/lines/: lines.ply
assets/terrain/: terrain-1-small.ply  terrain-1.ply  terrain-2-small.ply  terrain-2.ply  terrain-4-small.ply  terrain-4.ply  terrain-8-1d.ply  terrain-8-small.ply  terrain-8.ply  terrain-angles-strip.ply  terrain-lines-strip-hf.ply  terrain-lines-strip.ply  terrain-tri-strip.ply  terrain-tris.ply  terrain-trisply.ply
experiments/: barker.py  chirp.py  circular_path.csv  compare_correlation.py  cube_barker.py  cubes_with_seafloor.py  gen_csv.py  generate_trajectory.py  if_beamforming.py  interference.py  plots.py  sar_2d.py  sas_2d.py  sas_3d.py  scene_vis.py  shipwreck.py  simple_occupancy_grid.py  test_motion_tracer.py  test_open3d_mesh_loading.py  test_random_tracer.py  test_tracer.py  visualize_motion.py
experiments/2d/: actual-sas-fast.py  actual-sas-slow.py  actual_sas_fast.py  actual_sas_slow.py  circular_path.csv  contrast_opt_autofocus.py  run_2d_simulation.py  run_2d_slam.py  sasslam-plotting.py  sasslam.py
experiments/autofocus/: run.py  setup.py
experiments/bottom_looking/: config.py  generate_terrain.py  grid.py  loss_surface.py  pathslam.py  plot-results.py  plot_sharpness_opt.py  sas.py  signals.py  test_sas_direct.py  test_sas_sim.py  visualize.py
experiments/depthmap/: depthmap.py
(+35 files in other folders)
