[metadata]

name = mics
version = 0.0.1
author = Theo Chemel
author_email = theo@chemel.net
description = microphone research
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src